# FlightClient

./: .gitignore  AppConfig.qml  CMakeLists.txt  Main.qml  config.ini  main.cpp
FluentUI/: CMakeLists.txt
FluentUI/src/Qt6/imports/FluentUI/Controls/: FluNavigationView.qml
controller/: authcontroller.cpp  authcontroller.h  httpservice.cpp  httpservice.h
pages/: About.qml  AddFlight.qml  AdminDashboardPage.qml  AiChatPage.qml  Avatar.qml  BookingPage.qml  BurstAvatar.qml  DashboardPage.qml  FlightSearch.qml  HistoryPage.qml  LoginPage.qml  LoginPage1.qml  ModifyFlight.qml  OrderDetailPage.qml  Orders.qml  PayDialog.qml  RegisterPage.qml  UserCenterPage.qml  help.qml
